plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'grit'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'


	// REST API의 snake_case <-> camelCase 매핑 자동 처리
	implementation 'com.fasterxml.jackson.module:jackson-module-parameter-names'

	// Jackson snake_case 지원
	implementation 'com.fasterxml.jackson.core:jackson-databind'

	// Lombok
	annotationProcessor 'org.projectlombok:lombok'
	compileOnly 'org.projectlombok:lombok'

	// Swagger UI 자동 문서화
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'

	// DataBase
	runtimeOnly 'org.postgresql:postgresql'

	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// html 파싱 라이브러리
	implementation 'org.jsoup:jsoup:1.17.2'

	// .env 파일을 사용하기 위한 라이브러리
	testImplementation 'io.github.cdimascio:java-dotenv:5.2.2'

	// JWT 토큰 생성
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// 세션을 자동으로 관리하는 RestTemplate을 만들기 위해 필요
	implementation 'org.apache.httpcomponents.client5:httpclient5'

	// Spring AI 의존성 - Spring Milestone Repository에서 확인 후 추가
	implementation 'org.springframework.ai:spring-ai-core:1.0.0-M2'
	implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter:1.0.0-M2'
	implementation 'org.springframework.ai:spring-ai-qdrant-store-spring-boot-starter:1.0.0-M2'

}

tasks.named('test') {
	useJUnitPlatform()
}